cmake_minimum_required(VERSION 3.25)
project(CS213_2023S11_20220449_20220214_A1Bonus)

set(CMAKE_CXX_STANDARD 17)

add_executable(CS213_2023S11_20220449_20220214_A1Bonus CS213-2023–S11-20220449-20220214-A1Bonus.cpp CS213-2023–S11-20220449-20220214-A1Bonus.cpp CS213-2023–S11-20220449-20220214-A1Bonus.cpp)
